<resources>
    <!-- Author: Oskari Pahkala -->
    <string name="app_name">Activity tracker</string>
    <string name="addEntryContentDescription">Add calendar entry</string>
    <string name="description">Description</string>
    <string name="entry_type_food">Food</string>
    <string name="entry_type_exercise">Exercise</string>
    <string name="no_entries">No entries yet</string>
    <string name="entry_icon_content_description">entry icon</string>
    <string name="create_entry">Add Event</string>
    <string name="app_label">My Activity</string>
    <string name="no_empty_description">Description can\'t be empty.</string>
    <string name="white_transparent_background">white transparent background</string>
</resources>