<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Oskari Pahkala -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha=".1"
        android:contentDescription="@string/white_transparent_background"
        app:layout_constraintBottom_toBottomOf="@+id/calendarView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/calendarView"
        app:srcCompat="@android:drawable/screen_background_light" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_addEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/addEntryContentDescription"
        android:focusable="true"
        android:onClick="addEntry"
        app:icon="@drawable/ic_plus"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/noentriesflag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_entries"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/list_entries"
        app:layout_constraintEnd_toEndOf="@+id/list_entries"
        app:layout_constraintStart_toStartOf="@+id/list_entries"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <ListView
        android:id="@+id/list_entries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:longClickable="true"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/entryview">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>